--- a/src/web/scss/partials/_cp-header.scss
+++ b/src/web/scss/partials/_cp-header.scss
@@ -2,36 +2,39 @@
 @import "../../lib/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
 
 .cp-heading {
+    font-family: franklin-gothic-urw-cond, 'arial narrow', 'helvetica neue', helvetica, sans-serif;
+    font-weight: 700;
+    letter-spacing: .05em;
+    line-height: 1;
     text-transform: uppercase;
-    font-weight: 600;
 }
 
 h1.cp-heading {
     font-size: $font-size-h1;
-    margin: $font-size-h1 0 ($font-size-h1 * 0.4) 0;
+    margin: $font-size-h1 0 ($font-size-h1 * 0.4);
 }
 
 h2.cp-heading {
     font-size: $font-size-h2;
-    margin: $font-size-h2 0 ($font-size-h2 * 0.4) 0;
+    margin: $font-size-h2 0 ($font-size-h2 * 0.4);
 }
 
 h3.cp-heading {
     font-size: $font-size-h3;
-    margin: $font-size-h3 0 ($font-size-h3 * 0.4) 0;
+    margin: $font-size-h3 0 ($font-size-h3 * 0.4);
 }
 
 h4.cp-heading {
     font-size: $font-size-h4;
-    margin: $font-size-h4 0 ($font-size-h4 * 0.4) 0;
+    margin: $font-size-h4 0 ($font-size-h4 * 0.4);
 }
 
 h5.cp-heading {
     font-size: $font-size-h5;
-    margin: $font-size-h5 0 ($font-size-h5 * 0.4) 0;
+    margin: $font-size-h5 0 ($font-size-h5 * 0.4);
 }
 
 h6.cp-heading {
     font-size: $font-size-h6;
-    margin: $font-size-h6 0 ($font-size-h6 * 0.4) 0;
+    margin: $font-size-h6 0 ($font-size-h6 * 0.4);
 }
