--- a/src/web/templates/directives/cp-package-card.html
+++ b/src/web/templates/directives/cp-package-card.html
@@ -6,6 +6,6 @@
         <div class="cp-package-card-name" ng-bind="package.name" js-clamp="'2'"></div>
         <div class="cp-package-card-vendor">{{ package.vendor.name }}</div>
         <span class="cp-package-card-price">{{ package.costIncludingVat | currency:'£':2 }} <span>per head</span></span>
-        <span class="cp-package-card-notice" ng-if="package.notice">{{ package.notice }}H <span>notice</span></span>
+        <span class="cp-package-card-notice" ng-if="package.notice">{{ package.notice > 48 ? (package.notice / 24) + 'D' : package.notice + 'H' }} <span>notice</span></span>
     </div>
 </a>
