--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -19,7 +19,7 @@
             <span class="help-block">Use a comma to separate misspellings.</span>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" ng-if="vendor.isFlatCommission" id="edit-vendor-city-pantry-commission">
             <label for="city_pantry_commission">City Pantry commission %</label>
             <input class="form-control input-lg" id="city_pantry_commission" type="text" ng-model="vendor.cityPantryCommission" />
         </div>
