--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'partials/cp-package';
 @import 'partials/cp-tables';
 @import 'partials/cp-dashboard';
+@import 'partials/cp-checkout';
 
 /**
  * Misc
