--- a/src/web/scss/modules/_cp-bootstrap-variables.scss
+++ b/src/web/scss/modules/_cp-bootstrap-variables.scss
@@ -12,6 +12,8 @@ $border-radius-large: 0;
 $border-radius-base: 0;
 $border-radius-small: 0;
 
+$dl-horizontal-offset: 160px;
+
 // Bootstrap typography
 $font-family-base: proxima-nova, 'helvetica neue', helvetica, sans-serif;
 $btn-font-weight: 400;
