--- a/src/web/scss/partials/_cp-forms.scss
+++ b/src/web/scss/partials/_cp-forms.scss
@@ -6,7 +6,7 @@
         margin-bottom: 18px;
         padding: $cp-padding-xl-vertical ($grid-gutter-width / 2);
 
-        fieldset legend {
+        legend {
             @extend .cp-form-label;
             border-bottom: 0;
             display: inline-block;
@@ -26,6 +26,7 @@
 
 .cp-form-label {
     color: $cp-primary-color;
+    display: block;
     font-size: $font-size-h4;
     font-weight: 600;
     line-height: 1.167; // ~21px
@@ -54,7 +55,7 @@
         font-weight: 400;
 
         > input[type='checkbox'] {
-            margin: 1px 2px 0 $padding-small-horizontal;
+            margin: 1px 2px 0 0;
         }
     }
 }
