--- a/src/web/templates/directives/cp-address-form-for-customer.html
+++ b/src/web/templates/directives/cp-address-form-for-customer.html
@@ -1,69 +1,70 @@
 <form name="form" ng-submit="save()">
     <p class="form-error" ng-show="error" ng-bind="error"></p>
 
-    <div class="form-group">
-        <label for="address_label">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_label">
             {{ isNew ? 'Save address as...' : 'Saved location' }}
         </label>
 
-        <input class="form-control" id="address_label" name="addressLabel"
+        <input class="cp-form-control" id="address_label" name="addressLabel"
             ng-model="address.label" size="30" />
     </div>
 
     <hr />
 
-    <div class="form-group">
-        <label for="company_name">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="company_name">
             Company name
         </label>
 
-        <input class="form-control" id="company_name" name="companyName"
+        <input class="cp-form-control" id="company_name" name="companyName"
+            required aria-required="true"
             ng-model="address.companyName" size="30" />
     </div>
 
-    <div class="form-group">
-        <label for="address_line1">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line1">
             Address line 1
             <span class="form-element-invalid" ng-show="form.$submitted && form.addressLine1.$error.required">(Address line 1 is required.)</span>
         </label>
 
-        <input class="form-control" id="address_line1" name="addressLine1"
+        <input class="cp-form-control" id="address_line1" name="addressLine1"
             required aria-required="true"
             ng-model="address.addressLine1" size="50" />
     </div>
 
-    <div class="form-group">
-        <label for="address_line2">Address line 2</label>
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line2">Address line 2</label>
 
-        <input class="form-control" id="address_line2" name="addressLine2"
+        <input class="cp-form-control" id="address_line2" name="addressLine2"
             ng-model="address.addressLine2" size="50" />
     </div>
 
-    <div class="form-group">
-        <label for="address_line3">Address line 3</label>
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="address_line3">Address line 3</label>
 
-        <input class="form-control" id="address_line3" name="addressLine3"
+        <input class="cp-form-control" id="address_line3" name="addressLine3"
             ng-model="address.addressLine3" size="50" />
     </div>
 
-    <div class="form-group" id="form-group-city">
-        <label for="city">
+    <div class="cp-form-group" id="cp-form-group-city">
+        <label class="cp-form-label" for="city">
             Town/City
             <span class="form-element-invalid" ng-show="form.$submitted && form.city.$error.required">(City is required.)</span>
         </label>
 
-        <input class="form-control" id="city" name="city" required aria-required="true"
+        <input class="cp-form-control" id="city" name="city" required aria-required="true"
             ng-model="address.city" size="20" />
     </div>
 
-    <div class="form-group">
-        <label for="postcode">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="postcode">
             Postcode
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.required">(Postcode is required.)</span>
             <span class="form-element-invalid" ng-show="form.$submitted && form.postcode.$error.pattern">(Postcode is invalid.)</span>
         </label>
 
-        <input class="form-control" id="postcode" name="postcode" size="10"
+        <input class="cp-form-control" id="postcode" name="postcode" size="10"
             required aria-required="true"
             ng-model="address.postcode"
             ng-pattern="/[a-zA-Z]{1,2}[0-9][0-9A-Za-z]?\s?[0-9][a-zA-Z]{2}/" />
@@ -71,24 +72,24 @@
 
     <hr />
 
-    <div class="form-group">
-        <label for="office_manager_name">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="office_manager_name">
             Contact name on arrival
             <span class="form-element-invalid" ng-show="form.$submitted && form.officeManagerName.$error.required">(Office manager's name is required.)</span>
         </label>
 
-        <input class="form-control" id="office_manager_name" name="officeManagerName"
+        <input class="cp-form-control" id="office_manager_name" name="officeManagerName"
             required aria-required="true" size="30"
             ng-model="address.officeManagerName" />
     </div>
 
-    <div class="form-group">
-        <label for="landline_number">
+    <div class="cp-form-group">
+        <label class="cp-form-label" for="landline_number">
             Landline number
             <span class="form-element-invalid" ng-show="form.$submitted && form.LandlineNumber.$error.required">(Landline number is required.)</span>
         </label>
 
-        <input class="form-control" id="landline_number" name="landlineNumber" type="tel"
+        <input class="cp-form-control" id="landline_number" name="landlineNumber" type="tel"
             required aria-required="true" size="30"
             ng-model="address.landlineNumber" />
     </div>
@@ -97,22 +98,22 @@
 
     <h2 class="cp-heading">Instructions for arrival</h2>
 
-    <div class="form-group">
-        <p>Please provide any arrival information to help ensure a smooth delivery.</p>
+    <div class="cp-form-group">
+        <p>Do you have any instructions for the delivery driver's arrival?</p>
 
-        <textarea class="form-control" name="deliveryInstruction" ng-model="address.deliveryInstruction"></textarea>
+        <textarea class="cp-form-control" name="deliveryInstruction" ng-model="address.deliveryInstruction"></textarea>
     </div>
 
     <h2 class="cp-heading">Parking</h2>
 
-    <div class="form-group">
+    <div class="cp-form-group">
         <p>Can you recommend anywhere to park nearby?</p>
 
-        <textarea class="form-control" name="parkingSuggestion" ng-model="address.parkingSuggestion"></textarea>
+        <textarea class="cp-form-control" name="parkingSuggestion" ng-model="address.parkingSuggestion"></textarea>
     </div>
 
     <hr />
 
-    <input type="submit" value="{{ isNew ? 'Save' : 'Save changes' }}" class="btn btn-primary" />
-    <a class="btn btn-link" ng-click="cancel()">Cancel</a>
+    <input type="submit" value="{{ isNew ? 'Save' : 'Save changes' }}" class="btn btn-primary" ng-if="!isFormSubmitButtonHidden" />
+    <a class="btn btn-link" ng-click="cancel()" ng-if="!isFormSubmitButtonHidden">Cancel</a>
 </form>
