--- a/src/web/templates/general/checkout-payment.html
+++ b/src/web/templates/general/checkout-payment.html
@@ -1,4 +1,6 @@
-<div class="cp-checkout-steps"></div>
+<div class="cp-checkout-steps-wrap">
+    <ng-include src="'/dist/templates/directives/cp-checkout-steps.html'" ng-init="activeStep = 2"></ng-include>
+</div>
 
 <div class="container">
     <div class="cp-checkout">
