--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -7,7 +7,7 @@
 
     <h2>Details</h2>
 
-    <p>Is paid on account? {{ customer.isPaidOnAccount ? 'Yes' : 'No' }}</p>
+    <p>Pay on account? {{ customer.paidOnAccountStatus | getPaidOnAccountStatusText }}</p>
 
     <p>Customer since: {{ customer.dateAdded | date:'dd/MM/yyyy' }}</p>
 
@@ -17,8 +17,30 @@
 
     <p>User group: {{ customer.user.group.description }}</p>
 
-    <section ng-if="customer.hasRequestedToPayOnAccount || customer.isPaidOnAccount">
+    <section ng-if="customer.paidOnAccountStatus === 1">
+        <h2>Pay on account details</h2>
 
+        <p>The customer has been emailed and now must fill in their accounts department's details.</p>
+
+        <form class="admin-form" role="form">
+            <fieldset>
+                <div class="form-group">
+                    <label for="invoice_payment_terms">Payment terms</label>
+                    <input class="form-control input-lg" id="invoice_payment_terms" type="text" readonly ng-model="customer.invoicePaymentTerms" />
+                </div>
+
+                <div class="form-group">
+                    <label for="max_spend_per_month">Account limit per month</label>
+                    <div class="input-group input-group-lg input-group-readonly">
+                        <div class="input-group-addon">£</div>
+                        <input class="form-control input-lg" id="max_spend_per_month" type="number" min="1" step="0.01" readonly ng-model="customer.maxSpendPerMonth" />
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </section>
+
+    <section ng-if="customer.paidOnAccountStatus === 2">
         <h2>Pay on account details</h2>
 
         <form class="admin-form" role="form">
@@ -39,7 +61,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="invoice_payment_terms">Requested payment terms</label>
+                    <label for="invoice_payment_terms">Payment terms</label>
                     <input class="form-control input-lg" id="invoice_payment_terms" type="text" readonly ng-model="customer.invoicePaymentTerms" />
                 </div>
 
@@ -51,18 +73,11 @@
                     </div>
                 </div>
 
-                <div ng-if="customer.hasRequestedToPayOnAccount">
-                    <button class="btn btn-primary" type="button" ng-click="approveRequestToPayOnAccount()">Approve</button>
-                    <button class="btn btn-primary" type="button" ng-click="rejectRequestToPayOnAccount()">Reject</button>
-                    <p class="help-block">Clicking “Approve” or “Reject” will trigger an email to the customer confirming your action.</p>
-                </div>
-
                 <div ng-if="customer.isPaidOnAccount">
                     <button class="btn btn-primary" type="button" ng-click="revokePaymentOnAccount()">Revoke</button>
-                    <p class="help-block">Clicking “Revoke” will trigger an email to the customer confirming your action.</p>
+                    <p class="help-block">If you click revoke, the customer should be called to let them know. No automatic email is sent.</p>
                 </div>
             </fieldset>
         </form>
-
     </section>
 </div>
