--- a/src/web/templates/customer/pay-on-account.html
+++ b/src/web/templates/customer/pay-on-account.html
@@ -1,11 +1,27 @@
 <div class="thin-wrapper">
     <h2 class="cp-heading">Pay on account</h2>
 
-    <p ng-if="!user.customer.isPaidOnAccount">@todo - Chris to supply introduction to paying on account.</p>
+    <p ng-if="status === 0">
+        To request to pay on account, please call us on
+        <a ng-href="tel:{{ CP_TELEPHONE_NUMBER_INTERNATIONAL }}">{{ CP_TELEPHONE_NUMBER_UK }}</a>,
+        or email us at
+        <a ng-href="mailto:{{ CP_SUPPORT_EMAIL_ADDRESS }}">{{ CP_SUPPORT_EMAIL_ADDRESS }}</a>.
+    </p>
 
-    <p id="request_received_message" ng-if="user.customer.hasRequestedToPayOnAccount"><strong>We’ve received your request to pay on account.</strong></p>
+    <p ng-if="status === 1">
+        Please supply the following information. Once you do, you will be able to pay on account.
+        Your maximum monthly spend will be <b>{{ user.customer.maxSpendPerMonth | currency:'£' }}</b>,
+        and your payment terms will be <b>{{ user.customer.invoicePaymentTerms }}</b>.
+    </p>
 
-    <form name="payOnAccountForm" novalidate role="form" ng-if="!user.customer.hasRequestedToPayOnAccount" ng-submit="save(payOnAccountForm)">
+    <p ng-if="status === 2">
+        You are approved to pay on account.
+        Your maximum monthly spend is <b>{{ user.customer.maxSpendPerMonth | currency:'£' }}</b>,
+        and your payment terms are <b>{{ user.customer.invoicePaymentTerms }}</b>.
+        If your accounts department's details change, please update them below.
+    </p>
+
+    <form name="payOnAccountForm" novalidate role="form" ng-if="status !== 0" ng-submit="save(payOnAccountForm)">
         <fieldset>
             <div class="form-group">
                 <label for="accounts_contact_name">
@@ -30,28 +46,6 @@
                     <span class="form-element-invalid" ng-show="payOnAccountForm.$submitted && payOnAccountForm.accountsTelephoneNumber.$error.required">(Accounts telephone number is required.)</span>
                 </label>
                 <input class="form-control" id="accounts_telephone_number" name="accountsTelephoneNumber" type="tel" required aria-required="true" ng-model="user.customer.accountsTelephoneNumber" />
-            </div>
-
-            <div class="form-group" ng-if="!user.customer.isPaidOnAccount">
-                <label for="invoice_payment_terms">
-                    Requested payment terms
-                    <span class="form-element-invalid" ng-show="payOnAccountForm.$submitted && payOnAccountForm.invoicePaymentTerms.$error.required">(Requested payment terms is required.)</span>
-                </label>
-                <input class="form-control" id="invoice_payment_terms" name="invoicePaymentTerms" type="text" required aria-describedby="invoice_payment_terms_help" aria-required="true" ng-model="user.customer.invoicePaymentTerms" />
-                <span class="help-block" id="invoice_payment_terms_help">(e.g. Net 10, Net 30, <abbr title="end of month">EOM</abbr>, etc.)</span>
-            </div>
-
-            <div class="form-group" ng-if="!user.customer.isPaidOnAccount">
-                <label for="max_spend_per_month">
-                    Requested account limit per month
-                    <span class="form-element-invalid" ng-show="payOnAccountForm.$submitted && payOnAccountForm.maxSpendPerMonth.$error.required">(Requested account limit per month is required.)</span>
-                    <span class="form-element-invalid" ng-show="payOnAccountForm.$submitted && payOnAccountForm.maxSpendPerMonth.$error.number">(Requested account limit per month must be a number.)</span>
-                    <span class="form-element-invalid" ng-show="payOnAccountForm.$submitted && payOnAccountForm.maxSpendPerMonth.$error.min">(Requested account limit per month must be greater than 0.)</span>
-                </label>
-                <div class="input-group">
-                    <div class="input-group-addon">£</div>
-                    <input class="form-control" id="max_spend_per_month" name="maxSpendPerMonth" type="number" min="1" step="0.01" required aria-required="true" ng-model="user.customer.maxSpendPerMonth" />
-                </div>
             </div>
 
             <input class="btn btn-primary" type="submit" value="Save" />
