"My account" dropdown - changed dotted lines to solid lines.

--- a/src/web/scss/directives/cp-header.scss
+++ b/src/web/scss/directives/cp-header.scss
@@ -72,7 +72,7 @@ cp-header {
                 background-color: $cp-primary-color;
             }
             li {
-                border-top: 1px dotted white;
+                border-top: 1px solid white;
             }
             li a {
                 padding-top: $cp-header-secondary-item-vertical-padding;
